src/objects/Account.object
<CustomObject>
   <fields>
        <fullName>Reason_For_Clearing_Failure__c</fullName>
        <description>Needed for Integration</description>
        <label>Reason for Clearing Failure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>Reason_for_Deactivation__c</fullName>
        <label>Reason for Deactivation</label>
        <picklist>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
<fields>
        <fullName>Primary_Address_Local_City__c</fullName>
        <description>R4.4 Account &amp; Contact Field Implementation</description>
        <label>Primary Address (Local): City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassignment_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box defines if this account re-assignment pending or not</description>
        <label>Reassignment Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Picklist__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HLD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_ServIS_Sites__c</fullName>
        <formula>HYPERLINK(&quot;https://de-s-0199933.de.abb.com/servis/goto.php?GUID=&quot;&amp; GUID__c , &apos;Link to ServIS&apos;)</formula>
        <inlineHelpText>Link to SERVIS page</inlineHelpText>
        <label>Related ServIS Sites</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <description>R5 - Relationship Status</description>
        <inlineHelpText>Highest status of different ABB businesses. See market scope for details</inlineHelpText>
        <label>Relationship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB authorized value provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Account_GUID__c</fullName>
        <label>Root Account GUID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Group__c</fullName>
        <label>Segment Group</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buildings and Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement, Minerals and Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering, Procurement and Construction (EPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra-territorial organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Intermediation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Social Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels and Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance and Pension Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing of Electric/Electronic Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing of Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing of Other Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing of Transport Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil and Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post and Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Administration and Defence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulp and Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>R5 - Strenghts</description>
        <inlineHelpText>Describe strengths related to this partner&apos;s overall business</inlineHelpText>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Successor_Account_Name_GUID__c</fullName>
        <description>This will provide a successor text to be used for GIS update requests</description>
        <formula>IF(NOT(ISBLANK(Successor_Company__c)), 
Successor_Company__r.Name &amp; &quot; ( &quot; &amp; Successor_Company__r.GUID__c &amp;&quot; )&quot;,&quot;&quot;)</formula>
        <inlineHelpText>HIDDEN</inlineHelpText>
        <label>Successor Account Name GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successor_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>In case the current Company has been merged to (has been acquired by) another Company. Updates are provided by the GIS Team.</inlineHelpText>
        <label>Successor Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Succesor Company)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Successor_GUID_BAL__c</fullName>
        <formula>IF (  Successor_Company__r.Name &lt;&gt;&quot; &quot;,  Successor_Company__r.GUID__c , &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Successor GUID/BAL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swot_of_partner_business__c</fullName>
        <description>R5 - Swot of partner business</description>
        <label>Swot of partner business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TUID__c</fullName>
        <label>TUID</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Technical_Agreements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Technical Agreements</description>
        <label>Technical Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Incomplete_Date__c</fullName>
        <description>Store the date when the Company Status is set to &quot;Incomplete&quot;</description>
        <label>Technical Incomplete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <description>R5 - Threats</description>
        <inlineHelpText>Describe threats related to this partner&apos;s overall business</inlineHelpText>
        <label>Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Channel_Market_Coverage__c</fullName>
        <description>R5 - Total Number of Channel market Coverage and it is used for reporting purpose</description>
        <label>Total Number of Channel Market Coverage</label>
        <summaryForeignKey>Channel_Market_Coverage__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_turnover__c</fullName>
        <description>R5 - Total turnover</description>
        <inlineHelpText>Turnover of the total business of the partner.</inlineHelpText>
        <label>Total turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Agreements__c</fullName>
        <description>R5 - Type of Agreements</description>
        <inlineHelpText>Pick what types of agreements available. Workflow will be implemented in R6</inlineHelpText>
        <label>Type of Agreements</label>
        <picklist>
            <picklistValues>
                <fullName>Channel agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trademark licence agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical licence agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product branding agreement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VAT_Registration__c</fullName>
        <label>VAT Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>R5 - Weaknesses</description>
        <inlineHelpText>Describe weaknesses related to this partner&apos;s overall business</inlineHelpText>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AObDU</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Short_Name__c</columns>
        <columns>Company_Status__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Incumbent</value>
        </filters>
        <label>Accounts Owned by Demo Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Channel_Class__c</columns>
        <columns>Account_Short_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>GUID__c</columns>
        <columns>Company_Status__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Channel_Class_Level_1__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Buying_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Channel_Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Default,Account.GIS_Approved</value>
        </filters>
        <label>Buying Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ICV_Internal_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ABACUS_code__c</columns>
        <columns>CIT_code__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ICV_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ABB_ICV</value>
        </filters>
        <label>ICV (Internal) Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Account_Short_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>GUID__c</columns>
        <columns>Company_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyTeamAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Account_Short_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>GUID__c</columns>
        <columns>Company_Status__c</columns>
        <filterScope>Team</filterScope>
        <label>My Team Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Buying_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.External_Non_Buying_Account</value>
        </filters>
        <label>Non-Buying Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Read_Only_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Read_Only</value>
        </filters>
        <label>Read-Only Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>gisToBeCleared</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Family_Tree_Level__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Leading_Business_Partner_Segment__c</columns>
        <columns>GUID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GUID__c</field>
            <operation>equals</operation>
        </filters>
        <label>GIS: Accounts To Clear</label>
        <sharedTo/>
    </listViews>
    <recordTypes>
        <fullName>ABB_ICV</fullName>
        <active>true</active>
        <description>BEFORE CREATING ANY NEW ACCOUNT, SEARCH IN SFDC.IF THE ACCOUNT EXISTS THEN USE THIS ACCOUNT.IF REQUIRED YOU ARE ABLE TO CONVERT AN EXTERNAL NON-BUYING ACCOUNT TO A BUYING ACCOUNT BY CHANGING THE ACCOUNT RECORD.Internal ABB entity(Internal Customer/Vendor)</description>
        <label>ABB ICV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Before creating any new Account, search in SFDC. If the Account exists then use this Account.Initial record type to be selected to properly trigger the clearing and approval process for GIS/Masterdata.</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Non_Buying_Account</fullName>
        <active>true</active>
        <description>Account that are not placing direct orders with ABB. Example: - Indirect customers: entities that only are buying ABB products from channel partners. - Consultants: entities influencing the usage of ABB products, systems and/or services.</description>
        <label>External Non-Buying Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>GIS_Approved</fullName>
        <active>true</active>
        <description>All Account records that have been approved by GIS/Masterdata. Examples: - Direct Accounts: buying products, systems or services directly from ABB. - End Users: Entities driving indirectly capital expenditures of ABB products, systems or services.</description>
        <label>GIS Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <description>This record type is used for locked accounts to prevent users from accidentally changing data</description>
        <label>Read Only</label>
    </recordTypes>
 <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AccountPhone_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
NOT($Setup.Validation_Override__c.Exclude__c),
NOT(ISBLANK(Phone)),
NOT(REGEX(Phone,&quot;^(\\+\\d{1,3}\\s?)\\(?\\d{1,4}\\)?[\\s\\.\\-]?\\d{1,4}[\\s\\.\\-]?\\d{1,4}$&quot;))
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>When entering a phone number please correct the phone number using this format guidance: (e.g. +41 123 123456), starting with &quot;+&quot;, allowed characters are (). - 0-9 and white spaces thereafter</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Merge_Deactivation_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF( AND( NOT(Active__c), AND ( RecordType.Name == &apos;GIS Approved&apos;) , OR( NOT(ISBLANK(Successor_Company__c)), NOT(ISPICKVAL(Reason_for_Deactivation__c,&apos;&apos;))) ) , TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Clear the “Successor Account” &amp; “Reason for De-activation”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Merge_GIS_Account_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Active__c, 
     IF ( (RecordType.Name == &apos;GIS Approved&apos; &amp;&amp; Successor_Company__c != NULL &amp;&amp; Successor_Company__r.RecordType.Name != &apos;GIS Approved&apos;) , TRUE, FALSE),
     IF ( (Old_Record_Type__c != &apos;&apos; &amp;&amp; Old_Record_Type__c == &apos;01220000000jEdwAAE&apos; &amp;&amp; Successor_Company__c != NULL &amp;&amp; Successor_Company__r.RecordType.Name != &apos;GIS Approved&apos;) , TRUE, FALSE)
 )</errorConditionFormula>
        <errorMessage>Please don&apos;t select Default Record Type / External Non Buying Record Type/ Read Only Record Type as Successor Account!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Merge_ICV_Account</fullName>
        <active>true</active>
        <errorConditionFormula>if(!ISBLANK(Successor_Company__c), IF(Successor_Company__r.RecordTypeId == 
&apos;01220000000jJUl&apos;, True, False),  False)</errorConditionFormula>
        <errorMessage>Please don&apos;t select ICV account as Successor Account!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Merge_Reason_for_Deactivation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (NOT(ISBLANK(Successor_Company__c)) &amp;&amp;  ISPICKVAL(Reason_for_Deactivation__c, &apos;&apos;) &amp;&amp; ($Profile.Name !=&apos;ABB GIS Integration&apos;) ) , TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Please select the Reason for Deactivation!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_Quality_Other</fullName>
        <active>true</active>
        <description>All Address fields need to be entered</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Exclude__c),
            IF(OR(ISBLANK( BillingCountry),
           ISBLANK( BillingCity)),true, false))</errorConditionFormula>
        <errorMessage>Primary Address: Country &amp; City are required!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_Quality_US_Canada</fullName>
        <active>true</active>
        <description>All Address fields need to be entered</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Exclude__c ),
            IF(AND( OR ( BillingCountry = &quot;United States&quot;,
                     BillingCountry = &quot;Canada&quot;
                   ),
                OR( 
                    ISBLANK( BillingPostalCode ),
                    ISBLANK( BillingCity ),
                    ISBLANK(  BillingState  )
                   )
               ),
           true, 
           false))</errorConditionFormula>
        <errorMessage>Primary Address: State, City &amp; ZIP Code are required!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_no_At</fullName>
        <active>true</active>
        <description>City, Street or ZIP Code may not contain the @-character</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Exclude__c ),
            IF(
                    OR( 
                      CONTAINS( BillingCity , &quot;@&quot;), 
                      CONTAINS( BillingPostalCode , &quot;@&quot;),
                      CONTAINS( BillingStreet , &quot;@&quot;)
                    ),
                 true, 
                 false))</errorConditionFormula>
        <errorMessage>Primary Address: City, Street or ZIP Code may not contain the @ character!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Child_Account_Control</fullName>
        <active>false</active>
        <description>This rule will make sure that Accounts that are Global Headquarters OR Single Locations, will never have a Parent record associated.
-- DEACTIVATED 19.11. due to GIS integration --</description>
        <errorConditionFormula>AND(
 NOT(ISBLANK( Parent.Name )),
 OR( 
  ISPICKVAL( Family_Tree_Level__c, &quot;Global Headquarter&quot;),
  ISPICKVAL( Family_Tree_Level__c,&quot;Single Location&quot;)
 )
)</errorConditionFormula>
        <errorDisplayField>ParentId</errorDisplayField>
        <errorMessage>This Account should not have a Parent record!  Please check the Family Tree Level, and amend as required!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_and_Street_Billing</fullName>
        <active>true</active>
        <description>City and Street may not be the same.</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Exclude__c ),
                            IF( 
                             AND( 
                              BillingCity =  BillingStreet, 
                              NOT ( ISBLANK( BillingCity )),
                              NOT ( ISBLANK( BillingStreet ))
                             ),true, false)
        )</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>City and Street may not be the same!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_and_Street_Shipping</fullName>
        <active>true</active>
        <description>City and Street may not be the same.</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Exclude__c ),
                    IF(AND( 
                      ShippingCity =  ShippingStreet, 
                      NOT ( ISBLANK( ShippingCity )),
                      NOT ( ISBLANK( ShippingStreet ))
                     ),true, false)
        )</errorConditionFormula>
        <errorDisplayField>ShippingStreet</errorDisplayField>
        <errorMessage>City and Street may not be the same!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_empty_Billing</fullName>
        <active>false</active>
        <description>Country must be present
2014.11.26 - This validation is included already in validation &quot;Billing_Address_Quality&quot;</description>
        <errorConditionFormula>ISBLANK( BillingCountry )</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>Please check: you must select a Country from the picklist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_empty_Shipping</fullName>
        <active>false</active>
        <description>Country must be present
2014.11.26 - This validation is not needed, because the Postal (Shipping) address may or may not be used. Only once the Country is selected here, a validation will trigger to make sure the State is selected</description>
        <errorConditionFormula>ISBLANK( ShippingCountry )</errorConditionFormula>
        <errorDisplayField>ShippingCountry</errorDisplayField>
        <errorMessage>Please check: you must select a Country from the picklist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>General_validation_Billing</fullName>
        <active>true</active>
        <description>Fields ‘City’, ’Country’, ’Legal Name’, ’State District’, ’Street Name’ and ‘Zip Code’ cannot have strings like ‘Unknown’, ‘etc.’ or ‘n/a’
Removed Unknown from name to be able to create Temporary accounts: Helena</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
                NOT($Setup.Validation_Override__c.Exclude__c ),
            IF (
 OR(
  LOWER( BillingCity ) = &quot;etc&quot;,
  LOWER( BillingCountry ) = &quot;etc&quot;,
  LOWER( Name ) = &quot;etc&quot;,
  LOWER( BillingStreet ) = &quot;etc&quot;,
  LOWER( BillingPostalCode ) = &quot;etc&quot;,
  CONTAINS( LOWER( BillingCity &amp; BillingCountry  &amp; BillingStreet  &amp; BillingPostalCode ) , &quot;unknown&quot;),
CONTAINS( LOWER( BillingCity &amp; BillingCountry  &amp; ShippingStreet  &amp; BillingPostalCode ) , &quot;n/a&quot;),
  LOWER( BillingCity ) = &quot;na&quot;,
  LOWER( BillingCountry ) = &quot;na&quot;,
  LOWER( Name ) = &quot;na&quot;,
  LOWER( BillingStreet ) = &quot;na&quot;,
  LOWER( BillingPostalCode ) = &quot;na&quot;
 )
, true, false)
)</errorConditionFormula>
        <errorMessage>Please do not use values like &apos;Unknown&apos;, &apos;etc&apos; or &apos;n/a&apos;  in the Primary Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>General_validation_Shipping</fullName>
        <active>true</active>
        <description>Fields ‘City’, ’Country’, ’State District’, ’Street Name’ and ‘Zip Code’ cannot have strings like ‘Unknown’, ‘etc.’ or ‘n/a’</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Exclude__c ),
                IF(
 OR(
  LOWER( ShippingCity ) = &quot;etc&quot;,
  LOWER( ShippingCountry ) = &quot;etc&quot;,
  LOWER( ShippingStreet ) = &quot;etc&quot;,
  LOWER( ShippingPostalCode ) = &quot;etc&quot;,
  CONTAINS( LOWER( ShippingCity &amp; ShippingCountry &amp; ShippingStreet  &amp; ShippingPostalCode ) , &quot;unknown&quot;),
CONTAINS( LOWER( ShippingCity &amp; ShippingCountry &amp; ShippingStreet  &amp; ShippingPostalCode ) , &quot;n/a&quot;),
  LOWER( ShippingCity ) = &quot;na&quot;,
  LOWER( ShippingCountry ) = &quot;na&quot;,
  LOWER( ShippingStreet ) = &quot;na&quot;,
  LOWER( ShippingPostalCode ) = &quot;na&quot;
 )
, true, false)
    )</errorConditionFormula>
        <errorMessage>Please do not use values like &apos;Unknown&apos;, &apos;etc&apos; or &apos;n/a&apos; in the Postal Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Legal_name_empty</fullName>
        <active>true</active>
        <description>Account Legal Name must be at least 1 character</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Exclude__c ),
            IF(AND(
              OR( ISBLANK( Name ), LEN( Name ) = 1),
              NOT( REGEX(Name, &quot;[0-9,a-z,A-Z]&quot;) )
             ),true, false)
        )</errorConditionFormula>
        <errorDisplayField>ABACUS_code__c</errorDisplayField>
        <errorMessage>Please check: Account Legal Name must have at least 1 character / number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Account_Control</fullName>
        <active>false</active>
        <description>This rule will make sure that Accounts that are not Global Headquarters OR Single Locations, will always have a Parent record associated.
-- DEACTIVATED 19.11. due to GIS integration --</description>
        <errorConditionFormula>AND(
 ISBLANK( Parent.Name ),
 NOT( ISPICKVAL( Family_Tree_Level__c, &quot;&quot; )),
 AND( 
  NOT(ISPICKVAL( Family_Tree_Level__c, &quot;Global Headquarter&quot;)),
  NOT(ISPICKVAL( Family_Tree_Level__c,&quot;Single Location&quot;))
 )
)</errorConditionFormula>
        <errorDisplayField>ParentId</errorDisplayField>
        <errorMessage>This Account must have a Parent record!  Please check the Family Tree Level, and amend as required!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipping_Address_Quality_US_Canada</fullName>
        <active>false</active>
        <description>All Address fields need to be entered if the Postal (Shipping) Address is used.</description>
        <errorConditionFormula>AND( OR ( ShippingCountry = &quot;United States&quot;,
          ShippingCountry = &quot;Canada&quot;
         ),
     OR( ISBLANK( ShippingStreet ),
         ISBLANK( ShippingPostalCode ),
         ISBLANK( ShippingCity ),
         ISBLANK(  ShippingState  )
        )
    )</errorConditionFormula>
        <errorMessage>Postal Address: State, City, ZIP Code and Street are required!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipping_Address_no_At</fullName>
        <active>true</active>
        <description>City, Street or ZIP Code may not contain the @-character</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Exclude__c ),
            IF ( OR ( 
          CONTAINS( ShippingCity , &quot;@&quot;), 
          CONTAINS( ShippingPostalCode , &quot;@&quot;),
          CONTAINS( ShippingStreet , &quot;@&quot;)
         ),true, false)
    )</errorConditionFormula>
        <errorMessage>Postal Address: City, Street or ZIP Code may not contain the @ character!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_and_Street_Billing</fullName>
        <active>true</active>
        <description>State and Street field may not be the same.</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Exclude__c ),
            IF(AND( 
              BillingState =  BillingStreet, 
              NOT ( ISBLANK( BillingState )),
              NOT ( ISBLANK( BillingStreet ))
             ),true, false)
        )</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>State and Street fields may not be the same!</errorMessage>
    </validationRules>
</CustomObject>